Add overlay registry